# neuroTalk

./: .gitattributes  .gitignore  AGENTS.md  Makefile  QUICKSTART.md  README.md  THIRD_PARTY_LICENSES  ___testing_CLAUDE.md  app.py  pyproject.toml
.claude/: CLAUDE.md
backend/: .env  .env.example  .gitignore  pyproject.toml
backend/app/: main.py  models.py
backend/app/meeting/: router.py
backend/app/prompts/: system.py
backend/app/services/: denoise.py  llm.py  search.py  smart_turn.py  stt.py  tts.py  vad.py
backend/app/utils/: emotion.py  session_logger.py
backend/app/webrtc/: router.py  session.py
backend/config/: logging.py  settings.py
backend/models/tts/voices/: af_alloy.safetensors  af_aoede.safetensors  af_bella.safetensors  af_heart.safetensors  af_jessica.safetensors  af_kore.safetensors  af_nicole.safetensors  af_nova.safetensors  af_river.safetensors  af_sarah.safetensors  af_sky.safetensors  am_adam.safetensors  am_echo.safetensors  am_eric.safetensors  am_fenrir.safetensors  am_liam.safetensors  am_michael.safetensors  am_onyx.safetensors  am_puck.safetensors  am_santa.safetensors  bf_alice.safetensors  bf_emma.safetensors  bf_isabella.safetensors  bf_lily.safetensors  bm_daniel.safetensors  bm_fable.safetensors  bm_george.safetensors  bm_lewis.safetensors  ef_dora.safetensors  em_alex.safetensors  em_santa.safetensors  ff_siwis.safetensors  hf_alpha.safetensors  hf_beta.safetensors  hm_omega.safetensors  hm_psi.safetensors  if_sara.safetensors  im_nicola.safetensors  jf_alpha.safetensors  jf_gongitsune.safetensors  (+14 more)
backend/scripts/: download_deepfilter_model.py  download_models.py  download_smart_turn_model.py
backend/tests/: test_emotion.py  test_tts.py
components/: realtime_audio_component.py
docs/: LICENSE.smart-turn  WebRTC.md  blog.md  demo-narration.md  demo_script.md  model-analysis.md  orb-to-speech-flow.md
docs/superpowers/plans/: 2026-04-18-chatterbox-tts-integration.md
docs/superpowers/specs/: 2026-04-18-chatterbox-tts-integration-design.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: meeting-recorder.tsx  voice-agent-console.tsx  webrtc-transport.ts
frontend/public/: audio-processor.worklet.js
scripts/: agent.py  llm_call.py  stt.py  tts.py
scripts/speech/: tts_report.json  tts_report.md
scripts/tts_projects/chatterbox/: pyproject.toml  runner.py
scripts/tts_projects/kokoro/: pyproject.toml  runner.py
scripts/tts_projects/qwen/: pyproject.toml  runner.py
scripts/tts_projects/vibevoice/: pyproject.toml  runner.py
static/: realtime_audio.js
tests/: __init__.py  test_audio_utils.py  test_e2e_realtime.py  test_microphone_interactive.py  test_vad.py
utils/: __init__.py  audio_utils.py  config.py  speech_to_text.py  vad.py  websocket_server.py
