[project]
name = "neurotalk-backend"
version = "0.1.0"
description = "Minimal STT backend for NeuroTalk."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "faster-whisper>=1.1.1",
  "loguru>=0.7.3",
  "pydantic-settings>=2.7.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.0",
  "websockets>=15.0.1",
]

[tool.uv]
package = false
